Added a TOC as content of the Docs page.

--- a/plugins/jaxon/templates/partials/jaxon.html.twig
+++ b/plugins/jaxon/templates/partials/jaxon.html.twig
@@ -17,4 +17,10 @@
     <div class="list-blog-padding">
         {{ page.content }}
     </div>
+
+    {% if page.route == '/docs' %}
+    <div class="list-blog-padding">
+        {% include 'partials/intro.html.twig' %}
+    </div>
+    {% endif %}
 </div>
