--- a/plugins/jaxon/templates/partials/jaxon.html.twig
+++ b/plugins/jaxon/templates/partials/jaxon.html.twig
@@ -18,7 +18,7 @@
         {{ page.content }}
     </div>
 
-    {% if page.route == '/docs' %}
+    {% if page.route == '/docs' or page.route == '/features' %}
     <div class="list-blog-padding">
         {% include 'partials/intro.html.twig' %}
     </div>
