Removed the email from the top the template.

--- a/themes/habitat/templates/header/lang.html.twig
+++ b/themes/habitat/templates/header/lang.html.twig
@@ -17,7 +17,7 @@
                             </ul>
                         </div>
                         <div class="col-sm-6 text-right padding-vert-5">
-                            <strong>Email:</strong>&nbsp;info@joomla51.com
+                            <!-- <strong>Email:</strong>&nbsp;contact@jaxon-php.org -->
                         </div>
                     </div>
                 </div>
