Added modular partials for the homepage.

--- a/themes/habitat/templates/error.html.twig
+++ b/themes/habitat/templates/error.html.twig
@@ -1,6 +1,8 @@
 {% extends 'partials/page.html.twig' %}
 
 {% block content %}
+            <div id="content">
+                <div class="container background-white">
                     <div class="row margin-vert-30">
                         <div class="col-md-12">
                             <div class="error-404-page text-center">
@@ -9,4 +11,6 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
 {% endblock %}
