--- a/themes/habitat/templates/header/logo.html.twig
+++ b/themes/habitat/templates/header/logo.html.twig
@@ -3,9 +3,10 @@
                     <div class="row">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html" title="">
-                                <img src="/assets/img/logo.png" alt="Logo" />
-                            </a>
+                            <h1><a href="index.html" title="Jaxon"><!-- <img src="/assets/img/logo.png" alt="Logo" /> -->Jaxon</a></h1>
+                        </div>
+                        <div>
+                            <h3>[ !! Website under construction !! ]</h3>
                         </div>
                         <!-- End Logo -->
                     </div>
