--- a/themes/habitat/templates/jaxon.html.twig
+++ b/themes/habitat/templates/jaxon.html.twig
@@ -1,6 +1,8 @@
 {% extends 'partials/page.html.twig' %}
 
 {% block content %}
+            <div id="content">
+                <div class="container background-white">
                     <div class="row margin-vert-40">
                         <!-- Begin Sidebar Menu -->
                         <div class="col-md-3">
@@ -56,4 +58,6 @@
                             <div class="clearfix margin-bottom-10"></div>
                         </div>
                     </div>
+                </div>
+            </div>
 {% endblock %}
