--- a/themes/habitat/templates/partials/page.html.twig
+++ b/themes/habitat/templates/partials/page.html.twig
@@ -27,15 +27,14 @@
             <!-- Top Menu -->
 {% include 'header/menu.html.twig' %}
             <!-- End Top Menu -->
-            <!-- === END HEADER === -->
-            <!-- === BEGIN CONTENT === -->
-            <div id="content">
-                <div class="container background-white">
+<!-- === END HEADER === -->
+
+<!-- === BEGIN CONTENT === -->
 {% block content %}{% endblock %}
-                </div>
-            </div>
-            <!-- === END CONTENT === -->
-            <!-- === BEGIN FOOTER === -->
+<!-- === END CONTENT === -->
+
+<!-- === BEGIN FOOTER === -->
+            <!-- Footer -->
 {% include 'footer/links.html.twig' %}
             <!-- End Footer -->
             <!-- JS -->
