--- a/themes/habitat/templates/footer/links.html.twig
+++ b/themes/habitat/templates/footer/links.html.twig
@@ -1,4 +1,3 @@
-            <!-- Footer -->
             <div id="footer" class="background-grey">
                 <div class="container">
                     <div class="row">
@@ -13,7 +12,8 @@
                         <!-- End Footer Menu -->
                         <!-- Copyright -->
                         <div id="copyright" class="col-md-4">
-                            <p class="pull-right"><a href="/{{ grav.language.getActive }}">Jaxon</a></p>
+                            <p class="pull-right">Theme by <a href="http://www.bootstrap51.com" target="_blank">Bootstrap51</a>,
+                            edited for the <a href="https://www.getgrav.org" target="_blank">Grav CMS</a></p>
                         </div>
                         <!-- End Copyright -->
                     </div>
