--- a/themes/habitat/templates/header/css.html.twig
+++ b/themes/habitat/templates/header/css.html.twig
@@ -1,3 +1,4 @@
+{% block stylesheets %}
         <!-- Bootstrap Core CSS -->
         <link rel="stylesheet" href="/assets/css/bootstrap.css" rel="stylesheet">
         <!-- Template CSS -->
@@ -7,4 +8,6 @@
         <link rel="stylesheet" href="/assets/css/responsive.css" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/custom.css" rel="stylesheet">
         <!-- Google Fonts-->
-        <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+{% endblock %}
+{{ assets.css() }}
