--- a/themes/habitat/templates/home.html.twig
+++ b/themes/habitat/templates/home.html.twig
@@ -2,11 +2,10 @@
 
 {% block content %}
 
-{% set showcases = page.collection.first %}
-{% set motivations = page.collection.slice(1,1).first %}
-{% set features = page.collection.slice(2,1).first %}
-{% set plugins = page.collection.slice(3,1).first %}
-{% set integrations = page.collection.slice(4,1).first %}
+{% set motivations = page.collection.first %}
+{% set features = page.collection.slice(1,1).first %}
+{% set plugins = page.collection.slice(2,1).first %}
+{% set integrations = page.collection.slice(3,1).first %}
 
             <div id="content" class="bottom-border-shadow">
                 <div class="container background-white bottom-border">
@@ -18,7 +17,6 @@
                         <!-- End Main Text -->
                         <div class="col-md-6">
                             {{ motivations.content }}
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -50,4 +48,5 @@
                     </div>
                 </div>
             </div>
+
 {% endblock %}
