--- a/themes/habitat/templates/modular/integrations.html.twig
+++ b/themes/habitat/templates/modular/integrations.html.twig
@@ -6,10 +6,10 @@
                         <div class="col-md-3 text-center">
                             <h4 class="padding-top-10 animate fadeIn">{{ integration.name }}</h4>
                             <p class="animate fadeIn">{{ integration.description }}</p>
-                            <a href="{{ integration.website }}" target="_blank"><button type="button" class="btn btn-default">Website</button></a>
                             <a href="{{ integration.github }}" target="_blank"><button type="button" class="btn btn-default">Plugin</button></a>
+                            <a href="{{ integration.website }}" target="_blank"><button type="button" class="btn btn-default">Website</button></a>
 {% if integration.demo %}
-                            <a href="{{ integration.demo }}" target="_blank"><button type="button" class="btn btn-default">Demo</button></a>
+                            <a href="{{ integration.demo }}"><button type="button" class="btn btn-default">Demo</button></a>
 {% endif %}
                         </div>
 {% endfor %}
