--- a/themes/habitat/templates/home.html.twig
+++ b/themes/habitat/templates/home.html.twig
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-{% set motivations = page.collection.first %}
-{% set features = page.collection.slice(1,1).first %}
-{% set plugins = page.collection.slice(2,1).first %}
-{% set integrations = page.collection.slice(3,1).first %}
+{% set operation = page.collection.slice(1,1).first %}
+{% set features = page.collection.slice(2,1).first %}
+{% set plugins = page.collection.slice(3,1).first %}
+{% set integrations = page.collection.slice(4,1).first %}
 
             <div id="content" class="bottom-border-shadow">
                 <div class="container background-white bottom-border">
@@ -16,7 +16,7 @@
                         </div>
                         <!-- End Main Text -->
                         <div class="col-md-6">
-                            {{ motivations.content }}
+                            {{ operation.content }}
                         </div>
                     </div>
                 </div>
