--- a/themes/habitat/templates/sidebar/menu.html.twig
+++ b/themes/habitat/templates/sidebar/menu.html.twig
@@ -3,7 +3,7 @@
     {% if item.children|length > 0 %}
     <li class="list-group-item list-toggle">
         <a data-toggle="collapse" data-parent="#sidebar-nav" href="#collapse-{{ item.slug }}">{{ item.menu }}</a>
-        <ul id="collapse-{{ item.slug }}" class="collapse">
+        <ul id="collapse-{{ item.slug }}" class="collapse{% if item.active or item.activeChild %} in{% endif %}">
         {% for child in item.children %}
             {% if child.visible %}
             <li><a href="{{ child.url }}"><i class="fa fa-chevron-circle-right"></i>{{ child.menu }}</a></li>
