--- a/themes/habitat/templates/modular/operation.html.twig
+++ b/themes/habitat/templates/modular/operation.html.twig
@@ -1,13 +1,13 @@
                             <h3 class="padding-vert-10">{{ page.title }}</h3>
-	                        <div class="col-md-12 no-padding jaxon-code">
+	                        <div class="jaxon-code">
 	                            {{ page.header.operation.define }}
-<pre><code>
+<pre><code class="language-php">
 $jaxon->register(Jaxon::CALLABLE_OBJECT, new MyClass);
 </code></pre>
 	                        </div>
-	                        <div class="col-md-12 no-padding jaxon-code">
+	                        <div class="jaxon-code">
 	                            {{ page.header.operation.insert }}
-<pre><code>
+<pre><code class="language-html">
 &lt;input type="button" onclick="JaxonMyClass.myMethod()" /&gt;
 </code></pre>
 	                        </div>
