--- a/themes/habitat/templates/footer/js.html.twig
+++ b/themes/habitat/templates/footer/js.html.twig
@@ -14,6 +14,8 @@
             <script type="text/javascript" src="/assets/js/slimbox2.js" charset="utf-8"></script>
             <!-- Modernizr -->
             <script src="/assets/js/modernizr.custom.js" type="text/javascript"></script>
+            <!-- Prism -->
+            <script src="/assets/js/prism.js" type="text/javascript"></script>
 {% endblock %}
 {{ assets.js() }}
 {% if jaxon %}
