--- a/themes/habitat/templates/header/css.html.twig
+++ b/themes/habitat/templates/header/css.html.twig
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="/assets/css/nexus.css" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/responsive.css" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/custom.css" rel="stylesheet">
+        <link rel="stylesheet" href="/assets/css/prism.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
 {% endblock %}
