Changed the link to the homepage in the header.

--- a/themes/habitat/templates/header/logo.html.twig
+++ b/themes/habitat/templates/header/logo.html.twig
@@ -3,7 +3,7 @@
                     <div class="row">
                         <!-- Logo -->
                         <div class="logo">
-                            <h1><a href="index.html" title="Jaxon"><!-- <img src="/assets/img/logo.png" alt="Logo" /> -->Jaxon</a></h1>
+                            <h1><a href="/" title="Jaxon"><!-- <img src="/assets/img/logo.png" alt="Logo" /> -->Jaxon</a></h1>
                         </div>
                         <!-- End Logo -->
                     </div>
