--- a/themes/habitat/templates/header/meta.html.twig
+++ b/themes/habitat/templates/header/meta.html.twig
@@ -1,4 +1,5 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="description" content="">
+        <meta name="description" content="{{ site.metadata.description }}{% if header.metadata.description %} {{ header.metadata.description }}{% endif %}">
+        <meta name="keywords" content="{{ site.metadata.keywords }}{% if header.metadata.keywords %}, {{ header.metadata.keywords }}{% endif %}">
         <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
