--- a/themes/habitat/templates/header/menu.html.twig
+++ b/themes/habitat/templates/header/menu.html.twig
@@ -16,12 +16,12 @@
                                     <a href="#" target="_blank" title="RSS"></a>
                                 </li> -->
                                 <li class="social-twitter">
-                                    <a href="#" target="_blank" title="Twitter"></a>
+                                    <a href="https://twitter.com/JaxonPhp" target="_blank" title="Twitter"></a>
                                 </li>
-                                <li class="social-facebook">
+                                <!-- <li class="social-facebook">
                                     <a href="#" target="_blank" title="Facebook"></a>
                                 </li>
-                                <!-- <li class="social-googleplus">
+                                <li class="social-googleplus">
                                     <a href="#" target="_blank" title="Google+"></a>
                                 </li> -->
                             </ul>
