Fixed the HTML template.

--- a/themes/habitat/templates/partials/page.html.twig
+++ b/themes/habitat/templates/partials/page.html.twig
@@ -37,9 +37,10 @@
             <!-- Footer -->
 {% include 'footer/links.html.twig' %}
             <!-- End Footer -->
-            <!-- JS -->
+        </div>
+        <!-- JS -->
 {% include 'footer/js.html.twig' %}
-            <!-- End JS -->
+        <!-- End JS -->
     </body>
 </html>
 <!-- === END FOOTER === -->
