The examples now run as a standalone website. - The website uses the htmlqp library to load the examples with HTTP.

--- a/themes/habitat/templates/footer/js.html.twig
+++ b/themes/habitat/templates/footer/js.html.twig
@@ -19,8 +19,8 @@
 {% endblock %}
 {{ assets.js() }}
 {% if jaxon %}
-        {{ jaxon.css }}
-        {{ jaxon.js }}
-        {{ jaxon.script }}
+        {{ jaxon.init }}
+
+        {{ jaxon.code }}
 {% endif %}
             
