Added the JSComments code in the standard page template.

--- a/themes/habitat/templates/jaxon.html.twig
+++ b/themes/habitat/templates/jaxon.html.twig
@@ -56,6 +56,9 @@
                             <!-- End Section TOC -->
 {% endif %}
 
+{% if config.plugins.jscomments.enabled %}
+  {{ jscomments() }}
+{% endif %}
                             <div class="clearfix margin-bottom-10"></div>
                         </div>
                     </div>
