Updated home page content.

--- a/themes/habitat/templates/jaxon.html.twig
+++ b/themes/habitat/templates/jaxon.html.twig
@@ -43,7 +43,7 @@
                             <!-- End Section TOC -->
 {% endif %}
 
-{% if jaxon %}
+{% if jaxon and jaxon.html %}
                             <!-- Jaxon content -->
                             <div class="row">
                                 <div class="col-md-12">
