--- a/themes/habitat/assets/css/custom.css
+++ b/themes/habitat/assets/css/custom.css
@@ -4,3 +4,11 @@
 a {
   color: #42969e;
 }
+.read-more {
+  float: right;
+  margin-right: 15px;	
+}
+h4.features-block-title {
+  margin-top: 10px;
+  text-align: center;
+}
