Updated the website CSS.

--- a/themes/habitat/templates/header/css.html.twig
+++ b/themes/habitat/templates/header/css.html.twig
@@ -10,5 +10,11 @@
         <link rel="stylesheet" href="/assets/css/prism.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+		<style type="text/css">
+		pre[class*="language-"] {
+            margin-top: 0px;
+		    margin-bottom: 25px;
+		}
+		</style>
 {% endblock %}
 {{ assets.css() }}
