--- a/themes/habitat/templates/header/css.html.twig
+++ b/themes/habitat/templates/header/css.html.twig
@@ -15,6 +15,10 @@
             margin-top: 0px;
 		    margin-bottom: 25px;
 		}
+		ul.social-icons li.paypal-donate {
+		    height: 56px;
+		    padding-top: 16px;
+		}
 		</style>
 {% endblock %}
 {{ assets.css() }}
