--- a/themes/habitat/templates/header/menu.html.twig
+++ b/themes/habitat/templates/header/menu.html.twig
@@ -11,6 +11,11 @@
                             </div>
                         </div>
                         <div class="col-md-4 no-padding">
+                            <ul class="social-icons pull-left">
+                                <li class="paypal-donate">
+                                    {% include 'header/paypal.html.twig' %}
+                                </li>
+                            </ul>
                             <ul class="social-icons pull-right">
                                 <!-- <li class="social-rss">
                                     <a href="#" target="_blank" title="RSS"></a>
