Updated the website theme.

--- a/themes/habitat/templates/header/logo.html.twig
+++ b/themes/habitat/templates/header/logo.html.twig
@@ -11,14 +11,14 @@
                             </div>
                             <!-- End Logo -->
                         </div>
-                        <div class="col-md-4 hidden-xs">
+                        <!-- <div class="col-md-4 hidden-xs">
                             <div style="margin-top:60px;">
                                 &nbsp;
                             </div>
                             <div>
                                 <h3>{{ "HEADER.DONATE"|t }}</h3>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
