--- a/themes/habitat/templates/modular/operation.html.twig
+++ b/themes/habitat/templates/modular/operation.html.twig
@@ -1,16 +1,17 @@
-                            <h4 class="padding-vert-10">{{ page.title }}</h4>
+                            <h4>{{ page.title }}</h4>
 	                        <div class="jaxon-code">
 	                            {{ page.header.operation.define }}
 <pre><code class="language-php">
-$armada = jaxon()->armada();
-$armada->register(); // Register all the classes
+// Bootstrap the library and register classes
+jaxon()->app()->setup('/path/to/config/file.php');
 // Get a request to a Jaxon class
-$c = $armada->request('My.Namespace.My.Class');
+$c = jaxon()->request('My\\Namespace\\My\\Class');
 </code></pre>
 	                        </div>
 	                        <div class="jaxon-code">
 	                            {{ page.header.operation.insert }}
 <pre><code class="language-php">
-&lt;input type="button" onclick="&lt;?php echo $c->myMethod() ?&gt;" /&gt;
+&lt;!-- Call the PHP class from the browser using Ajax --&gt;
+&lt;button onclick="&lt;?php echo $c->myMethod() ?&gt;" /&gt;
 </code></pre>
 	                        </div>
