--- a/themes/habitat/templates/item.html.twig
+++ b/themes/habitat/templates/item.html.twig
@@ -43,17 +43,17 @@
 
 {% block post_header %}
                                 <div class="blog-item-header">
-    {{ block('post_header_title') }}      
+    {{ block('post_header_title') }}
                                 </div>
                                 <div class="blog-post-details">
-    {{ block('post_header_date') }} 
+    {{ block('post_header_date') }}
     {{ block('post_header_taxonomy') }}
-    {{ block('post_header_comments') }} 
+    {{ block('post_header_comments') }}
                                 </div>
 {% endblock %}
 
-{% block post_header_title %}   
-{% set title_tag = title_tag|default('h2') %}
+{% block post_header_title %}
+{% set title_tag = title_tag|default('h3') %}
 {% if page.header.link %}
                                     <{{ title_tag }}>
                                         {% if page.header.continue_link is not sameas(false) %}
@@ -62,7 +62,7 @@
                                         <a href="{{ page.header.link }}">{{ page.title }}</a>
                                     </{{ title_tag }}>
 {% else %}
-                                    <{{ title_tag }}><a href="{{ page.url }}">{{ page.title }}</a></{{ title_tag }}>
+                                    <{{ title_tag }}>{{ page.title }}</{{ title_tag }}>
 {% endif %}
 {% endblock %}
 
@@ -88,6 +88,7 @@
 {% endblock %}
 
 {% block post_header_comments %}
+{% if config.plugins.jscomments.enabled %}
                                     <!-- # of Comments -->
                                     <div class="blog-post-details-item blog-post-details-item-left blog-post-details-item-last">
                                         <a href="">
@@ -96,9 +97,10 @@
                                         </a>
                                     </div>
                                     <!-- End # of Comments -->
+{% endif %}
 {% endblock %}
 
-{% block post_image %}   
+{% block post_image %}
 {% if header_image %}
     {% if header_image_file %}
         {% set header_image_media = page.media.images[header_image_file] %}
@@ -114,25 +116,25 @@
                                     <div class="clearfix"></div>
                                     <div class="blog-post-body row margin-top-15">
                                         <div class="col-md-12">
-    {{ block('post_image') }} 
+    {{ block('post_image') }}
                                         </div>
                                         <div class="col-md-12">
                                             {{ page.content }}
                                         </div>
                                     </div>
                                     <div class="blog-item-footer">
-    {{ block('post_comments') }} 
+    {{ block('post_comments') }}
                                     </div>
                                 </div>
 {% endblock %}
 
 {% block post_comments %}
+{% if config.plugins.jscomments.enabled %}
                                         <!-- Comments -->
                                         <div class="blog-recent-comments panel panel-default margin-bottom-30">
                                             <div class="panel-heading"><h3>Comments</h3></div>
-{% if config.plugins.jscomments.enabled %}
   {{ jscomments() }}
-{% endif %}
                                         </div>
                                         <!-- End Comments -->
+{% endif %}
 {% endblock %}
