Added first blog entries.

--- a/themes/habitat/templates/blog.html.twig
+++ b/themes/habitat/templates/blog.html.twig
@@ -36,7 +36,7 @@
 {{ block('urls') }}
 {% set header_image = page.header.header_image|defined(true) %}
 {% set header_image_width  = page.header.header_image_width|defined(900) %}
-{% set header_image_height = page.header.header_image_height|defined(300) %}
+{% set header_image_height = page.header.header_image_height|defined(600) %}
 {% set header_image_file = page.header.header_image_file %}
                             <!-- Blog Post -->
                             <div class="blog-post padding-bottom-20">
@@ -129,7 +129,9 @@
 {% else %}
     {% set header_image_media = page.media.images|first %}
 {% endif %}
+                                        <div class="thumbnail">
                                             {{ header_image_media.cropZoom(header_image_width, header_image_height).html }}
+                                        </div>
 {% endblock %}
 
 {% block post_content %}
