Page contents must be raw printed.

--- a/themes/habitat/templates/error.html.twig
+++ b/themes/habitat/templates/error.html.twig
@@ -7,7 +7,7 @@
                         <div class="col-md-12">
                             <div class="error-404-page text-center">
                                 <h2>404!</h2>
-                                {{ page.content }}
+                                {{ page.content | raw }}
                             </div>
                         </div>
                     </div>
