--- a/themes/habitat/templates/item.html.twig
+++ b/themes/habitat/templates/item.html.twig
@@ -124,7 +124,7 @@
     {{ block('post_image') }}
                                         </div>
                                         <div class="col-md-12">
-                                            {{ page.content }}
+                                            {{ page.content | raw }}
                                         </div>
                                     </div>
                                     <div class="blog-item-footer">
