--- a/themes/habitat/templates/features.html.twig
+++ b/themes/habitat/templates/features.html.twig
@@ -25,7 +25,7 @@
                             <!-- Page content -->
                             <div class="row">
                                 <div class="col-md-12">
-                                    {{ page.content }}
+                                    {{ page.content | raw }}
                                     <hr>
                                 </div>
                             </div>
@@ -35,7 +35,7 @@
                             <div class="row">
 {% for block in page.collection %}
                                 <div class="col-md-6">
-                                    {{ block.content }}
+                                    {{ block.content | raw }}
                                 </div>
 {% endfor %}
                             </div>
