--- a/themes/habitat/templates/modular/features-block.html.twig
+++ b/themes/habitat/templates/modular/features-block.html.twig
@@ -1,5 +1,5 @@
                                     <h4 class="features-block-title">{{ page.header.title }}</h4>
-{{ page.content }}
+{{ page.content | raw }}
 {% if page.header.read %}
                                     <div class="read-more"><a href="{{ page.header.read.link }}">{{ page.header.read.text }}</a></div>
 {% endif %}
