--- a/themes/habitat/templates/item.html.twig
+++ b/themes/habitat/templates/item.html.twig
@@ -108,7 +108,7 @@
         {% set header_image_media = page.media.images|first %}
     {% endif %}
                         <div class="thumbnail" style="margin-bottom:20px">
-                            {{ header_image_media.cropZoom(header_image_width, header_image_height).html }}
+                            {{ header_image_media.cropZoom(header_image_width, header_image_height).html | raw }}
                             <div class="caption">
 {% include 'blog/credits/unsplash.html.twig' with {'author':header_image_media.meta.author} %}
                             </div>
