Added a blog entry in french.

--- a/themes/habitat/templates/blog/credits/unsplash.html.twig
+++ b/themes/habitat/templates/blog/credits/unsplash.html.twig
@@ -1,1 +1,1 @@
-<span>Photo by <a href="https://unsplash.com/@{{ author.id }}?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">{{ author.name }}</a> on <a href="/s/photos/php?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+<span>Photo by <a href="https://unsplash.com/@{{ author.id }}?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="_blank">{{ author.name }}</a> on <a href="https://unsplash.com" target="_blank">Unsplash</a></span>
