--- a/themes/habitat/templates/modular/plugins.html.twig
+++ b/themes/habitat/templates/modular/plugins.html.twig
@@ -1,8 +1,8 @@
-                        <div class="col-md-12 text-center">
+                        <div class="text-center">
                             <h3 class="padding-vert-10">{{ page.title }}</h3>
                             {{ content }}
                         </div>
-{% for plugin in page.header.plugins %}
+{# {% for plugin in page.header.plugins %}
                         <div class="col-md-3 text-center">
                             <h4 class="padding-top-10 animate fadeIn">{{ plugin.name }}</h4>
                             <p class="animate fadeIn">{{ plugin.description }}</p>
@@ -12,4 +12,4 @@
                             <a href="{{ plugin.demo }}"><button type="button" class="btn btn-default">Demo</button></a>
 {% endif %}
                         </div>
-{% endfor %}
+{% endfor %} #}
