--- a/themes/habitat/templates/modular/operation.html.twig
+++ b/themes/habitat/templates/modular/operation.html.twig
@@ -1,17 +1,14 @@
-                            <h4>{{ page.title }}</h4>
-	                        <div class="jaxon-code">
-	                            {{ page.header.operation.define }}
-<pre><code class="language-php">
-// Bootstrap the library and register classes
-jaxon()->app()->setup('/path/to/config/file.php');
-// Get a request to a Jaxon class
-$c = jaxon()->request('My\\Namespace\\My\\Class');
-</code></pre>
-	                        </div>
-	                        <div class="jaxon-code">
-	                            {{ page.header.operation.insert }}
-<pre><code class="language-php">
-&lt;!-- Call the PHP class from the browser using Ajax --&gt;
-&lt;button onclick="&lt;?php echo $c->myMethod() ?&gt;" /&gt;
-</code></pre>
-	                        </div>
+							<div class="row text-center">
+                            	<h4>{{ page.title }}</h4>
+								{{ content }}
+{% for section in page.header.sections %}
+								<div class="col-md-4">
+									{# <span class="fa-stack">
+										<span class="fa fa-circle-o fa-stack-2x color-primary"></span>
+										<strong class="fa-stack-1x color-primary">{{ section.rank }}</strong>
+									</span> #}
+									<i class="fa fa-{{ section.icon }} fa-2x color-primary"></i>
+									<p class="animate fadeIn">{{ section.text }}</p>
+								</div>
+{% endfor %}
+							</div>
